fixed image height to align buttons

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,7 @@ header > h1 {
 .roundedInput {
   border-radius: 50px 50px 50px 50px;
 }
+
+.poster {
+  height: 75%;
+}
